# django-oscar-accounts

./: MANIFEST.in  requirements.txt  setup.cfg  setup.py
accounts/: abstract_models.py  facade.py  models.py  utils.py
accounts/checkout/: gateway.py
accounts/dashboard/: views.py
accounts/locale/cs/LC_MESSAGES/: django.po
accounts/migrations/: 0001_initial.py
