[metadata]
name = django-oscar-accounts
summary = Managed accounts for django-oscar
description-file =
    README.md
author = David Winterbottom
author-email = david.winterbottom@tangentlabs.co.uk
home-page = https://github.com/django-oscar/django-oscar-accounts
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python

[files]
packages =
    accounts
